--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build-css": "node-sass-chokidar src/styles/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
